fix: block portfolio overflow-y hidden

--- a/singolo2.css
+++ b/singolo2.css
@@ -96,6 +96,8 @@ a {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  max-height: 996px;
+  overflow-y: hidden;
 }
 
 .catalog-images__img {
